--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<header>
 			<div class="container">
 				<div class="left">
-					<img src="imagens/Netflix_logo_name.png" alt="Logo Netflix" class="logo" />
+					<img src="#" alt="Logo Netflix" class="logo" />
 					<nav class="nav-menu">
 						<ul class="sidebar">
 							<li onclick="hideSidebar()">
